<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/container_layout_margin">

        <TextView
            android:id="@+id/signup_title"
            style="@style/LabelStyle"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/signup_title"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/signup_welcome_msg"
            style="@style/LabelStyle"
            android:layout_below="@id/signup_title"
            android:layout_marginTop="16dp"
            android:text="@string/signup_welcome_txt" />

        <EditText
            android:id="@+id/et_full_name"
            style="@style/EditTextStyle"
            android:layout_below="@id/signup_welcome_msg"
            android:layout_marginTop="16dp"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            app:validateMaxLength="@{30}"
            app:validateMinLength="@{3}"
            app:validateRegex='@{"[a-zA-Z ]+"}'
            app:validateRegexAutoDismiss="@{true}"
            app:validateRegexMessage="@{@string/fullname_error}" />

        <EditText
            android:id="@+id/et_email_address"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_full_name"
            android:layout_marginTop="16dp"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            app:validateRegex='@{"^\\D.+@.+\\.[a-z]+"}'
            app:validateRegexAutoDismiss="@{true}"
            app:validateRegexMessage="@{@string/email_error}" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_email_address"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:validateRegex='@{"^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[.#?!@$%^&amp;*-]).{8,}$"}'
            app:validateRegexAutoDismiss="@{true}"
            app:validateRegexMessage="@{@string/password_error}" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp"
            android:text="@string/continue_btn_label" />

        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_continue"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/divider_or"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/divider_or"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/divider_or"

                android:textColor="@color/divider_or"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/divider_or"
                android:background="@color/divider" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/have_account"
                style="@style/LabelStyle"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/have_account"
                android:textColor="@color/account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login"
                style="@style/LabelStyle"
                android:layout_toEndOf="@id/have_account"
                android:fontFamily="@font/sf_pro_display_medium"
                android:onClick="login"
                android:text="@string/login_label"
                android:textColor="@color/orange"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</layout>