<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/container_layout_margin">

        <TextView
            android:id="@+id/tv_dp"
            style="@style/LabelStyle"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/upload_profile_picture"
            android:textColor="@color/orange" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile_placeholder"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp" />


        <LinearLayout
            android:id="@+id/upload_section_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imageView"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/fromGallery"
                style="@style/StrokeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/from_gallery" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/fromCamera"
                style="@style/StrokeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/from_camera" />

        </LinearLayout>

        <Button
            android:id="@+id/upload"
            style="@style/StrokeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/upload_section_layout"
            android:layout_marginTop="16dp"
            android:text="@string/upload" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:text="@string/submit_btn_label" />

    </RelativeLayout>

</layout>