<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/container_layout_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_little_more_about_you"
            style="@style/LabelStyle"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/little_more_about_you"
            android:textColor="@color/orange" />

        <LinearLayout
            android:id="@+id/zip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_zip"
                style="@style/TextLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zipcode"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zip_code_hint"
                android:inputType="textPostalAddress"
                android:textSize="22sp"
                app:validateMaxLength="@{30}"
                app:validateMinLength="@{5}"
                app:validateRegex='@{"^[0-9]{5}(?:-[0-9]{4})?$"}'
                app:validateRegexAutoDismiss="@{true}"
                app:validateRegexMessage="@{@string/zipcode_error}" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/height_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/height_picker_heading"
                style="@style/TextLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/height_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/height_value_tv"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/height_picker_heading"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                tools:text="165 cms" />

            <com.kevalpatel2106.rulerpicker.RulerValuePicker
                android:id="@+id/height_ruler_picker"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/height_value_tv"
                android:layout_marginTop="4dp"
                android:background="@android:color/holo_orange_dark"
                app:indicator_color="@android:color/white"
                app:indicator_interval="8dp"
                app:indicator_width="2dp"
                app:max_value="250"
                app:min_value="100"
                app:notch_color="@color/colorPrimaryDark"
                app:ruler_text_size="4sp"
                tools:targetApi="lollipop" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/gender_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_gender"
                style="@style/TextLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/rg_gender"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="22sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dob"
                style="@style/TextLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/d_o_b"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date"
                android:textSize="22sp"
                app:validateDate='@{"dd/MM/yyyy"}'
                app:validateEmpty="@{true}" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/continue_btn_label" />

    </LinearLayout>
</layout>