<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEF5E7">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/material_miui"
            tools:ignore="contentDescription" />

        <ImageButton
            android:id="@+id/photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/android_png_image"
            tools:ignore="contentDescription" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="#ebca0707"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/tv_full_name"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/full_name_hint"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_full_name"
                android:layout_centerHorizontal="true"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_layout"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_age_label"
                        style="@style/TextLabelStyle"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:text="@string/age" />

                    <TextView
                        android:id="@+id/tv_age"
                        style="@style/TextLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:text="@string/age_hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_gender_label"
                        style="@style/TextLabelStyle"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:text="@string/gender_label" />

                    <TextView
                        android:id="@+id/tv_gender"
                        style="@style/TextLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:elevation="4dp"
                        android:text="@string/gender" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_height_label"
                        style="@style/TextLabelStyle"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:text="@string/height_label" />

                    <TextView
                        android:id="@+id/tv_height"
                        style="@style/TextLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:elevation="4dp"
                        android:text="@string/height" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_race_label"
                        style="@style/TextLabelStyle"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:text="@string/ethnicity_label" />

                    <TextView
                        android:id="@+id/tv_race"
                        style="@style/TextLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:text="@string/ethnicity_label" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_religion_label"
                        style="@style/TextLabelStyle"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:text="@string/religion_label" />

                    <TextView
                        android:id="@+id/tv_religion"
                        style="@style/TextLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:text="@string/religion" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>